parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM ID SEMICOLON programa1 programa2 MAIN OPENPAR CLOSEPAR OPENCURLY programa3 CLOSECURLY
Rule 2     programa1 -> vars
Rule 3     programa1 -> epsilon
Rule 4     programa2 -> funciones
Rule 5     programa2 -> epsilon
Rule 6     programa3 -> estatutos
Rule 7     programa3 -> epsilon
Rule 8     vars -> VARS vars1
Rule 9     vars1 -> tipo COLON lista_ids SEMICOLON vars2
Rule 10    vars2 -> vars1
Rule 11    vars2 -> epsilon
Rule 12    lista_ids -> ID lista_ids1
Rule 13    lista_ids1 -> lista_ids2
Rule 14    lista_ids1 -> OPENBOX exp CLOSEBOX lista_ids2
Rule 15    lista_ids2 -> COMMA lista_ids
Rule 16    lista_ids2 -> epsilon
Rule 17    tipo -> TYPEFLOAT
Rule 18    tipo -> TYPEINT
Rule 19    tipo -> TYPECHAR
Rule 20    funciones -> FUNCTION funciones1
Rule 21    funciones -> epsilon
Rule 22    funciones1 -> tipo funciones2
Rule 23    funciones1 -> TYPEVOID funciones2
Rule 24    funciones2 -> ID OPENPAR funciones3
Rule 25    funciones3 -> funciones4
Rule 26    funciones3 -> funciones6
Rule 27    funciones4 -> tipo ID funciones5
Rule 28    funciones5 -> COMMA funciones4
Rule 29    funciones5 -> funciones6
Rule 30    funciones6 -> CLOSEPAR funciones7
Rule 31    funciones7 -> vars OPENCURLY funciones8
Rule 32    funciones7 -> OPENCURLY funciones8
Rule 33    funciones8 -> estatutos funciones8
Rule 34    funciones8 -> CLOSECURLY funciones
Rule 35    estatutos -> asignacion estatutos1
Rule 36    estatutos -> llamada estatutos1
Rule 37    estatutos -> retorno estatutos1
Rule 38    estatutos -> lectura estatutos1
Rule 39    estatutos -> escritura estatutos1
Rule 40    estatutos -> condicion estatutos1
Rule 41    estatutos -> while estatutos1
Rule 42    estatutos -> for estatutos1
Rule 43    estatutos -> expresion estatutos1
Rule 44    estatutos1 -> estatutos
Rule 45    estatutos1 -> epsilon
Rule 46    asignacion -> ID asignacion1 IS expresion SEMICOLON
Rule 47    asignacion1 -> OPENBOX exp CLOSEBOX
Rule 48    asignacion1 -> epsilon
Rule 49    llamada -> funcion SEMICOLON
Rule 50    funcion -> ID OPENPAR funcion1
Rule 51    funcion1 -> exp funcion2
Rule 52    funcion2 -> COMMA funcion1
Rule 53    funcion2 -> CLOSEPAR
Rule 54    retorno -> RETURN OPENPAR exp CLOSEPAR SEMICOLON
Rule 55    lectura -> READ OPENPAR lista_ids CLOSEPAR SEMICOLON
Rule 56    escritura -> WRITE OPENPAR escritura1 CLOSEPAR SEMICOLON
Rule 57    escritura1 -> STRING escritura2
Rule 58    escritura1 -> lista_ids escritura2
Rule 59    escritura2 -> COMMA escritura1
Rule 60    escritura2 -> epsilon
Rule 61    condicion -> IF OPENPAR expresion CLOSEPAR THEN OPENCURLY condicion1
Rule 62    condicion1 -> estatutos condicion1
Rule 63    condicion1 -> CLOSECURLY condicion2
Rule 64    condicion2 -> ELSE OPENCURLY condicion3
Rule 65    condicion2 -> epsilon
Rule 66    condicion3 -> estatutos condicion3
Rule 67    condicion3 -> CLOSECURLY
Rule 68    while -> WHILE OPENPAR expresion CLOSEPAR DO OPENCURLY while1
Rule 69    while1 -> estatutos while1
Rule 70    while1 -> CLOSECURLY
Rule 71    for -> FOR ID for1 IS exp TO exp DO OPENCURLY for2 CLOSECURLY
Rule 72    for1 -> OPENBOX exp CLOSEBOX
Rule 73    for1 -> epsilon
Rule 74    for2 -> estatutos for2
Rule 75    for2 -> epsilon
Rule 76    expresion -> or
Rule 77    or -> and or1
Rule 78    or1 -> OR or
Rule 79    or1 -> epsilon
Rule 80    and -> equal and1
Rule 81    and1 -> AND and
Rule 82    and1 -> epsilon
Rule 83    equal -> compare equal1
Rule 84    equal1 -> EQ equal
Rule 85    equal1 -> NE equal
Rule 86    equal1 -> epsilon
Rule 87    compare -> exp compare1
Rule 88    compare1 -> LT compare
Rule 89    compare1 -> LE compare
Rule 90    compare1 -> GT compare
Rule 91    compare1 -> GE compare
Rule 92    compare1 -> epsilon
Rule 93    exp -> termino exp1
Rule 94    exp1 -> PLUS exp
Rule 95    exp1 -> MINUS exp
Rule 96    exp1 -> epsilon
Rule 97    termino -> factor termino1
Rule 98    termino1 -> MULTIPLY termino
Rule 99    termino1 -> DIVIDE termino
Rule 100   termino1 -> MODULO termino
Rule 101   termino1 -> epsilon
Rule 102   factor -> ID factor1
Rule 103   factor -> OPENPAR expresion CLOSEPAR
Rule 104   factor -> funcion
Rule 105   factor -> factor2 varcte
Rule 106   factor1 -> OPENBOX exp CLOSEBOX
Rule 107   factor1 -> epsilon
Rule 108   factor2 -> PLUS
Rule 109   factor2 -> MINUS
Rule 110   factor2 -> epsilon
Rule 111   varcte -> ID
Rule 112   varcte -> INT
Rule 113   varcte -> FLOAT
Rule 114   varcte -> CHAR
Rule 115   epsilon -> <empty>

Terminals, with rules where they appear

AND                  : 81
CHAR                 : 114
CLOSEBOX             : 14 47 72 106
CLOSECURLY           : 1 34 63 67 70 71
CLOSEPAR             : 1 30 53 54 55 56 61 68 103
COLON                : 9
COMMA                : 15 28 52 59
DIVIDE               : 99
DO                   : 68 71
ELSE                 : 64
EQ                   : 84
FLOAT                : 113
FOR                  : 71
FUNCTION             : 20
GE                   : 91
GT                   : 90
ID                   : 1 12 24 27 46 50 71 102 111
IF                   : 61
INT                  : 112
IS                   : 46 71
LE                   : 89
LT                   : 88
MAIN                 : 1
MINUS                : 95 109
MODULO               : 100
MULTIPLY             : 98
NE                   : 85
OPENBOX              : 14 47 72 106
OPENCURLY            : 1 31 32 61 64 68 71
OPENPAR              : 1 24 50 54 55 56 61 68 103
OR                   : 78
PLUS                 : 94 108
PROGRAM              : 1
READ                 : 55
RETURN               : 54
SEMICOLON            : 1 9 46 49 54 55 56
STRING               : 57
THEN                 : 61
TO                   : 71
TYPECHAR             : 19
TYPEFLOAT            : 17
TYPEINT              : 18
TYPEVOID             : 23
VARS                 : 8
WHILE                : 68
WRITE                : 56
error                : 

Nonterminals, with rules where they appear

and                  : 77 81
and1                 : 80
asignacion           : 35
asignacion1          : 46
compare              : 83 88 89 90 91
compare1             : 87
condicion            : 40
condicion1           : 61 62
condicion2           : 63
condicion3           : 64 66
epsilon              : 3 5 7 11 16 21 45 48 60 65 73 75 79 82 86 92 96 101 107 110
equal                : 80 84 85
equal1               : 83
escritura            : 39
escritura1           : 56 59
escritura2           : 57 58
estatutos            : 6 33 44 62 66 69 74
estatutos1           : 35 36 37 38 39 40 41 42 43
exp                  : 14 47 51 54 71 71 72 87 94 95 106
exp1                 : 93
expresion            : 43 46 61 68 103
factor               : 97
factor1              : 102
factor2              : 105
for                  : 42
for1                 : 71
for2                 : 71 74
funcion              : 49 104
funcion1             : 50 52
funcion2             : 51
funciones            : 4 34
funciones1           : 20
funciones2           : 22 23
funciones3           : 24
funciones4           : 25 28
funciones5           : 27
funciones6           : 26 29
funciones7           : 30
funciones8           : 31 32 33
lectura              : 38
lista_ids            : 9 15 55 58
lista_ids1           : 12
lista_ids2           : 13 14
llamada              : 36
or                   : 76 78
or1                  : 77
programa             : 0
programa1            : 1
programa2            : 1
programa3            : 1
retorno              : 37
termino              : 93 98 99 100
termino1             : 97
tipo                 : 9 22 27
varcte               : 105
vars                 : 2 31
vars1                : 8 10
vars2                : 9
while                : 41
while1               : 68 69

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM ID SEMICOLON programa1 programa2 MAIN OPENPAR CLOSEPAR OPENCURLY programa3 CLOSECURLY

    PROGRAM         shift and go to state 1

    programa                       shift and go to state 2

state 1

    (1) programa -> PROGRAM . ID SEMICOLON programa1 programa2 MAIN OPENPAR CLOSEPAR OPENCURLY programa3 CLOSECURLY

    ID              shift and go to state 3


state 2

    (0) S' -> programa .



state 3

    (1) programa -> PROGRAM ID . SEMICOLON programa1 programa2 MAIN OPENPAR CLOSEPAR OPENCURLY programa3 CLOSECURLY

    SEMICOLON       shift and go to state 4


state 4

    (1) programa -> PROGRAM ID SEMICOLON . programa1 programa2 MAIN OPENPAR CLOSEPAR OPENCURLY programa3 CLOSECURLY
    (2) programa1 -> . vars
    (3) programa1 -> . epsilon
    (8) vars -> . VARS vars1
    (115) epsilon -> .

    VARS            shift and go to state 6
    FUNCTION        reduce using rule 115 (epsilon -> .)
    MAIN            reduce using rule 115 (epsilon -> .)

    vars                           shift and go to state 5
    epsilon                        shift and go to state 7
    programa1                      shift and go to state 8

state 5

    (2) programa1 -> vars .

    FUNCTION        reduce using rule 2 (programa1 -> vars .)
    MAIN            reduce using rule 2 (programa1 -> vars .)


state 6

    (8) vars -> VARS . vars1
    (9) vars1 -> . tipo COLON lista_ids SEMICOLON vars2
    (17) tipo -> . TYPEFLOAT
    (18) tipo -> . TYPEINT
    (19) tipo -> . TYPECHAR

    TYPEFLOAT       shift and go to state 13
    TYPEINT         shift and go to state 12
    TYPECHAR        shift and go to state 10

    vars1                          shift and go to state 11
    tipo                           shift and go to state 9

state 7

    (3) programa1 -> epsilon .

    FUNCTION        reduce using rule 3 (programa1 -> epsilon .)
    MAIN            reduce using rule 3 (programa1 -> epsilon .)


state 8

    (1) programa -> PROGRAM ID SEMICOLON programa1 . programa2 MAIN OPENPAR CLOSEPAR OPENCURLY programa3 CLOSECURLY
    (4) programa2 -> . funciones
    (5) programa2 -> . epsilon
    (20) funciones -> . FUNCTION funciones1
    (21) funciones -> . epsilon
    (115) epsilon -> .

    FUNCTION        shift and go to state 14
    MAIN            reduce using rule 115 (epsilon -> .)

    epsilon                        shift and go to state 15
    programa2                      shift and go to state 16
    funciones                      shift and go to state 17

state 9

    (9) vars1 -> tipo . COLON lista_ids SEMICOLON vars2

    COLON           shift and go to state 18


state 10

    (19) tipo -> TYPECHAR .

    COLON           reduce using rule 19 (tipo -> TYPECHAR .)
    ID              reduce using rule 19 (tipo -> TYPECHAR .)


state 11

    (8) vars -> VARS vars1 .

    FUNCTION        reduce using rule 8 (vars -> VARS vars1 .)
    MAIN            reduce using rule 8 (vars -> VARS vars1 .)
    OPENCURLY       reduce using rule 8 (vars -> VARS vars1 .)


state 12

    (18) tipo -> TYPEINT .

    COLON           reduce using rule 18 (tipo -> TYPEINT .)
    ID              reduce using rule 18 (tipo -> TYPEINT .)


state 13

    (17) tipo -> TYPEFLOAT .

    COLON           reduce using rule 17 (tipo -> TYPEFLOAT .)
    ID              reduce using rule 17 (tipo -> TYPEFLOAT .)


state 14

    (20) funciones -> FUNCTION . funciones1
    (22) funciones1 -> . tipo funciones2
    (23) funciones1 -> . TYPEVOID funciones2
    (17) tipo -> . TYPEFLOAT
    (18) tipo -> . TYPEINT
    (19) tipo -> . TYPECHAR

    TYPEVOID        shift and go to state 21
    TYPEFLOAT       shift and go to state 13
    TYPEINT         shift and go to state 12
    TYPECHAR        shift and go to state 10

    tipo                           shift and go to state 19
    funciones1                     shift and go to state 20

state 15

    (5) programa2 -> epsilon .
    (21) funciones -> epsilon .

  ! reduce/reduce conflict for MAIN resolved using rule 5 (programa2 -> epsilon .)
    MAIN            reduce using rule 5 (programa2 -> epsilon .)

  ! MAIN            [ reduce using rule 21 (funciones -> epsilon .) ]


state 16

    (1) programa -> PROGRAM ID SEMICOLON programa1 programa2 . MAIN OPENPAR CLOSEPAR OPENCURLY programa3 CLOSECURLY

    MAIN            shift and go to state 22


state 17

    (4) programa2 -> funciones .

    MAIN            reduce using rule 4 (programa2 -> funciones .)


state 18

    (9) vars1 -> tipo COLON . lista_ids SEMICOLON vars2
    (12) lista_ids -> . ID lista_ids1

    ID              shift and go to state 24

    lista_ids                      shift and go to state 23

state 19

    (22) funciones1 -> tipo . funciones2
    (24) funciones2 -> . ID OPENPAR funciones3

    ID              shift and go to state 26

    funciones2                     shift and go to state 25

state 20

    (20) funciones -> FUNCTION funciones1 .

    MAIN            reduce using rule 20 (funciones -> FUNCTION funciones1 .)


state 21

    (23) funciones1 -> TYPEVOID . funciones2
    (24) funciones2 -> . ID OPENPAR funciones3

    ID              shift and go to state 26

    funciones2                     shift and go to state 27

state 22

    (1) programa -> PROGRAM ID SEMICOLON programa1 programa2 MAIN . OPENPAR CLOSEPAR OPENCURLY programa3 CLOSECURLY

    OPENPAR         shift and go to state 28


state 23

    (9) vars1 -> tipo COLON lista_ids . SEMICOLON vars2

    SEMICOLON       shift and go to state 29


state 24

    (12) lista_ids -> ID . lista_ids1
    (13) lista_ids1 -> . lista_ids2
    (14) lista_ids1 -> . OPENBOX exp CLOSEBOX lista_ids2
    (15) lista_ids2 -> . COMMA lista_ids
    (16) lista_ids2 -> . epsilon
    (115) epsilon -> .

  ! shift/reduce conflict for COMMA resolved as shift
    OPENBOX         shift and go to state 31
    COMMA           shift and go to state 33
    SEMICOLON       reduce using rule 115 (epsilon -> .)
    CLOSEPAR        reduce using rule 115 (epsilon -> .)

  ! COMMA           [ reduce using rule 115 (epsilon -> .) ]

    lista_ids1                     shift and go to state 32
    lista_ids2                     shift and go to state 34
    epsilon                        shift and go to state 30

state 25

    (22) funciones1 -> tipo funciones2 .

    MAIN            reduce using rule 22 (funciones1 -> tipo funciones2 .)


state 26

    (24) funciones2 -> ID . OPENPAR funciones3

    OPENPAR         shift and go to state 35


state 27

    (23) funciones1 -> TYPEVOID funciones2 .

    MAIN            reduce using rule 23 (funciones1 -> TYPEVOID funciones2 .)


state 28

    (1) programa -> PROGRAM ID SEMICOLON programa1 programa2 MAIN OPENPAR . CLOSEPAR OPENCURLY programa3 CLOSECURLY

    CLOSEPAR        shift and go to state 36


state 29

    (9) vars1 -> tipo COLON lista_ids SEMICOLON . vars2
    (10) vars2 -> . vars1
    (11) vars2 -> . epsilon
    (9) vars1 -> . tipo COLON lista_ids SEMICOLON vars2
    (115) epsilon -> .
    (17) tipo -> . TYPEFLOAT
    (18) tipo -> . TYPEINT
    (19) tipo -> . TYPECHAR

    FUNCTION        reduce using rule 115 (epsilon -> .)
    MAIN            reduce using rule 115 (epsilon -> .)
    OPENCURLY       reduce using rule 115 (epsilon -> .)
    TYPEFLOAT       shift and go to state 13
    TYPEINT         shift and go to state 12
    TYPECHAR        shift and go to state 10

    vars2                          shift and go to state 38
    vars1                          shift and go to state 39
    tipo                           shift and go to state 9
    epsilon                        shift and go to state 37

state 30

    (16) lista_ids2 -> epsilon .

    SEMICOLON       reduce using rule 16 (lista_ids2 -> epsilon .)
    CLOSEPAR        reduce using rule 16 (lista_ids2 -> epsilon .)
    COMMA           reduce using rule 16 (lista_ids2 -> epsilon .)


state 31

    (14) lista_ids1 -> OPENBOX . exp CLOSEBOX lista_ids2
    (93) exp -> . termino exp1
    (97) termino -> . factor termino1
    (102) factor -> . ID factor1
    (103) factor -> . OPENPAR expresion CLOSEPAR
    (104) factor -> . funcion
    (105) factor -> . factor2 varcte
    (50) funcion -> . ID OPENPAR funcion1
    (108) factor2 -> . PLUS
    (109) factor2 -> . MINUS
    (110) factor2 -> . epsilon
    (115) epsilon -> .

  ! shift/reduce conflict for ID resolved as shift
    ID              shift and go to state 48
    OPENPAR         shift and go to state 43
    PLUS            shift and go to state 44
    MINUS           shift and go to state 47
    INT             reduce using rule 115 (epsilon -> .)
    FLOAT           reduce using rule 115 (epsilon -> .)
    CHAR            reduce using rule 115 (epsilon -> .)

  ! ID              [ reduce using rule 115 (epsilon -> .) ]

    factor2                        shift and go to state 40
    epsilon                        shift and go to state 41
    termino                        shift and go to state 45
    exp                            shift and go to state 46
    factor                         shift and go to state 42
    funcion                        shift and go to state 49

state 32

    (12) lista_ids -> ID lista_ids1 .

    COMMA           reduce using rule 12 (lista_ids -> ID lista_ids1 .)
    CLOSEPAR        reduce using rule 12 (lista_ids -> ID lista_ids1 .)
    SEMICOLON       reduce using rule 12 (lista_ids -> ID lista_ids1 .)


state 33

    (15) lista_ids2 -> COMMA . lista_ids
    (12) lista_ids -> . ID lista_ids1

    ID              shift and go to state 24

    lista_ids                      shift and go to state 50

state 34

    (13) lista_ids1 -> lista_ids2 .

    SEMICOLON       reduce using rule 13 (lista_ids1 -> lista_ids2 .)
    CLOSEPAR        reduce using rule 13 (lista_ids1 -> lista_ids2 .)
    COMMA           reduce using rule 13 (lista_ids1 -> lista_ids2 .)


state 35

    (24) funciones2 -> ID OPENPAR . funciones3
    (25) funciones3 -> . funciones4
    (26) funciones3 -> . funciones6
    (27) funciones4 -> . tipo ID funciones5
    (30) funciones6 -> . CLOSEPAR funciones7
    (17) tipo -> . TYPEFLOAT
    (18) tipo -> . TYPEINT
    (19) tipo -> . TYPECHAR

    CLOSEPAR        shift and go to state 55
    TYPEFLOAT       shift and go to state 13
    TYPEINT         shift and go to state 12
    TYPECHAR        shift and go to state 10

    funciones6                     shift and go to state 51
    funciones4                     shift and go to state 52
    funciones3                     shift and go to state 53
    tipo                           shift and go to state 54

state 36

    (1) programa -> PROGRAM ID SEMICOLON programa1 programa2 MAIN OPENPAR CLOSEPAR . OPENCURLY programa3 CLOSECURLY

    OPENCURLY       shift and go to state 56


state 37

    (11) vars2 -> epsilon .

    FUNCTION        reduce using rule 11 (vars2 -> epsilon .)
    MAIN            reduce using rule 11 (vars2 -> epsilon .)
    OPENCURLY       reduce using rule 11 (vars2 -> epsilon .)


state 38

    (9) vars1 -> tipo COLON lista_ids SEMICOLON vars2 .

    FUNCTION        reduce using rule 9 (vars1 -> tipo COLON lista_ids SEMICOLON vars2 .)
    MAIN            reduce using rule 9 (vars1 -> tipo COLON lista_ids SEMICOLON vars2 .)
    OPENCURLY       reduce using rule 9 (vars1 -> tipo COLON lista_ids SEMICOLON vars2 .)


state 39

    (10) vars2 -> vars1 .

    FUNCTION        reduce using rule 10 (vars2 -> vars1 .)
    MAIN            reduce using rule 10 (vars2 -> vars1 .)
    OPENCURLY       reduce using rule 10 (vars2 -> vars1 .)


state 40

    (105) factor -> factor2 . varcte
    (111) varcte -> . ID
    (112) varcte -> . INT
    (113) varcte -> . FLOAT
    (114) varcte -> . CHAR

    ID              shift and go to state 61
    INT             shift and go to state 58
    FLOAT           shift and go to state 59
    CHAR            shift and go to state 60

    varcte                         shift and go to state 57

state 41

    (110) factor2 -> epsilon .

    ID              reduce using rule 110 (factor2 -> epsilon .)
    INT             reduce using rule 110 (factor2 -> epsilon .)
    FLOAT           reduce using rule 110 (factor2 -> epsilon .)
    CHAR            reduce using rule 110 (factor2 -> epsilon .)


state 42

    (97) termino -> factor . termino1
    (98) termino1 -> . MULTIPLY termino
    (99) termino1 -> . DIVIDE termino
    (100) termino1 -> . MODULO termino
    (101) termino1 -> . epsilon
    (115) epsilon -> .

    MULTIPLY        shift and go to state 66
    DIVIDE          shift and go to state 63
    MODULO          shift and go to state 62
    PLUS            reduce using rule 115 (epsilon -> .)
    MINUS           reduce using rule 115 (epsilon -> .)
    CLOSEBOX        reduce using rule 115 (epsilon -> .)
    LT              reduce using rule 115 (epsilon -> .)
    LE              reduce using rule 115 (epsilon -> .)
    GT              reduce using rule 115 (epsilon -> .)
    GE              reduce using rule 115 (epsilon -> .)
    EQ              reduce using rule 115 (epsilon -> .)
    NE              reduce using rule 115 (epsilon -> .)
    AND             reduce using rule 115 (epsilon -> .)
    OR              reduce using rule 115 (epsilon -> .)
    CLOSEPAR        reduce using rule 115 (epsilon -> .)
    ID              reduce using rule 115 (epsilon -> .)
    RETURN          reduce using rule 115 (epsilon -> .)
    READ            reduce using rule 115 (epsilon -> .)
    WRITE           reduce using rule 115 (epsilon -> .)
    IF              reduce using rule 115 (epsilon -> .)
    WHILE           reduce using rule 115 (epsilon -> .)
    FOR             reduce using rule 115 (epsilon -> .)
    OPENPAR         reduce using rule 115 (epsilon -> .)
    INT             reduce using rule 115 (epsilon -> .)
    FLOAT           reduce using rule 115 (epsilon -> .)
    CHAR            reduce using rule 115 (epsilon -> .)
    CLOSECURLY      reduce using rule 115 (epsilon -> .)
    COMMA           reduce using rule 115 (epsilon -> .)
    SEMICOLON       reduce using rule 115 (epsilon -> .)
    TO              reduce using rule 115 (epsilon -> .)
    DO              reduce using rule 115 (epsilon -> .)

    epsilon                        shift and go to state 64
    termino1                       shift and go to state 65

state 43

    (103) factor -> OPENPAR . expresion CLOSEPAR
    (76) expresion -> . or
    (77) or -> . and or1
    (80) and -> . equal and1
    (83) equal -> . compare equal1
    (87) compare -> . exp compare1
    (93) exp -> . termino exp1
    (97) termino -> . factor termino1
    (102) factor -> . ID factor1
    (103) factor -> . OPENPAR expresion CLOSEPAR
    (104) factor -> . funcion
    (105) factor -> . factor2 varcte
    (50) funcion -> . ID OPENPAR funcion1
    (108) factor2 -> . PLUS
    (109) factor2 -> . MINUS
    (110) factor2 -> . epsilon
    (115) epsilon -> .

  ! shift/reduce conflict for ID resolved as shift
    ID              shift and go to state 48
    OPENPAR         shift and go to state 43
    PLUS            shift and go to state 44
    MINUS           shift and go to state 47
    INT             reduce using rule 115 (epsilon -> .)
    FLOAT           reduce using rule 115 (epsilon -> .)
    CHAR            reduce using rule 115 (epsilon -> .)

  ! ID              [ reduce using rule 115 (epsilon -> .) ]

    expresion                      shift and go to state 70
    and                            shift and go to state 67
    compare                        shift and go to state 68
    factor2                        shift and go to state 40
    funcion                        shift and go to state 49
    equal                          shift and go to state 71
    epsilon                        shift and go to state 41
    termino                        shift and go to state 45
    exp                            shift and go to state 69
    factor                         shift and go to state 42
    or                             shift and go to state 72

state 44

    (108) factor2 -> PLUS .

    ID              reduce using rule 108 (factor2 -> PLUS .)
    INT             reduce using rule 108 (factor2 -> PLUS .)
    FLOAT           reduce using rule 108 (factor2 -> PLUS .)
    CHAR            reduce using rule 108 (factor2 -> PLUS .)


state 45

    (93) exp -> termino . exp1
    (94) exp1 -> . PLUS exp
    (95) exp1 -> . MINUS exp
    (96) exp1 -> . epsilon
    (115) epsilon -> .

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
    PLUS            shift and go to state 75
    MINUS           shift and go to state 76
    CLOSEBOX        reduce using rule 115 (epsilon -> .)
    LT              reduce using rule 115 (epsilon -> .)
    LE              reduce using rule 115 (epsilon -> .)
    GT              reduce using rule 115 (epsilon -> .)
    GE              reduce using rule 115 (epsilon -> .)
    EQ              reduce using rule 115 (epsilon -> .)
    NE              reduce using rule 115 (epsilon -> .)
    AND             reduce using rule 115 (epsilon -> .)
    OR              reduce using rule 115 (epsilon -> .)
    CLOSEPAR        reduce using rule 115 (epsilon -> .)
    ID              reduce using rule 115 (epsilon -> .)
    RETURN          reduce using rule 115 (epsilon -> .)
    READ            reduce using rule 115 (epsilon -> .)
    WRITE           reduce using rule 115 (epsilon -> .)
    IF              reduce using rule 115 (epsilon -> .)
    WHILE           reduce using rule 115 (epsilon -> .)
    FOR             reduce using rule 115 (epsilon -> .)
    OPENPAR         reduce using rule 115 (epsilon -> .)
    INT             reduce using rule 115 (epsilon -> .)
    FLOAT           reduce using rule 115 (epsilon -> .)
    CHAR            reduce using rule 115 (epsilon -> .)
    CLOSECURLY      reduce using rule 115 (epsilon -> .)
    COMMA           reduce using rule 115 (epsilon -> .)
    SEMICOLON       reduce using rule 115 (epsilon -> .)
    TO              reduce using rule 115 (epsilon -> .)
    DO              reduce using rule 115 (epsilon -> .)

  ! PLUS            [ reduce using rule 115 (epsilon -> .) ]
  ! MINUS           [ reduce using rule 115 (epsilon -> .) ]

    epsilon                        shift and go to state 73
    exp1                           shift and go to state 74

state 46

    (14) lista_ids1 -> OPENBOX exp . CLOSEBOX lista_ids2

    CLOSEBOX        shift and go to state 77


state 47

    (109) factor2 -> MINUS .

    ID              reduce using rule 109 (factor2 -> MINUS .)
    INT             reduce using rule 109 (factor2 -> MINUS .)
    FLOAT           reduce using rule 109 (factor2 -> MINUS .)
    CHAR            reduce using rule 109 (factor2 -> MINUS .)


state 48

    (102) factor -> ID . factor1
    (50) funcion -> ID . OPENPAR funcion1
    (106) factor1 -> . OPENBOX exp CLOSEBOX
    (107) factor1 -> . epsilon
    (115) epsilon -> .

  ! shift/reduce conflict for OPENPAR resolved as shift
    OPENPAR         shift and go to state 81
    OPENBOX         shift and go to state 80
    MULTIPLY        reduce using rule 115 (epsilon -> .)
    DIVIDE          reduce using rule 115 (epsilon -> .)
    MODULO          reduce using rule 115 (epsilon -> .)
    PLUS            reduce using rule 115 (epsilon -> .)
    MINUS           reduce using rule 115 (epsilon -> .)
    CLOSEBOX        reduce using rule 115 (epsilon -> .)
    LT              reduce using rule 115 (epsilon -> .)
    LE              reduce using rule 115 (epsilon -> .)
    GT              reduce using rule 115 (epsilon -> .)
    GE              reduce using rule 115 (epsilon -> .)
    EQ              reduce using rule 115 (epsilon -> .)
    NE              reduce using rule 115 (epsilon -> .)
    AND             reduce using rule 115 (epsilon -> .)
    OR              reduce using rule 115 (epsilon -> .)
    CLOSEPAR        reduce using rule 115 (epsilon -> .)
    ID              reduce using rule 115 (epsilon -> .)
    RETURN          reduce using rule 115 (epsilon -> .)
    READ            reduce using rule 115 (epsilon -> .)
    WRITE           reduce using rule 115 (epsilon -> .)
    IF              reduce using rule 115 (epsilon -> .)
    WHILE           reduce using rule 115 (epsilon -> .)
    FOR             reduce using rule 115 (epsilon -> .)
    INT             reduce using rule 115 (epsilon -> .)
    FLOAT           reduce using rule 115 (epsilon -> .)
    CHAR            reduce using rule 115 (epsilon -> .)
    CLOSECURLY      reduce using rule 115 (epsilon -> .)
    COMMA           reduce using rule 115 (epsilon -> .)
    SEMICOLON       reduce using rule 115 (epsilon -> .)
    TO              reduce using rule 115 (epsilon -> .)
    DO              reduce using rule 115 (epsilon -> .)

  ! OPENPAR         [ reduce using rule 115 (epsilon -> .) ]

    factor1                        shift and go to state 78
    epsilon                        shift and go to state 79

state 49

    (104) factor -> funcion .

    MULTIPLY        reduce using rule 104 (factor -> funcion .)
    DIVIDE          reduce using rule 104 (factor -> funcion .)
    MODULO          reduce using rule 104 (factor -> funcion .)
    PLUS            reduce using rule 104 (factor -> funcion .)
    MINUS           reduce using rule 104 (factor -> funcion .)
    CLOSEBOX        reduce using rule 104 (factor -> funcion .)
    LT              reduce using rule 104 (factor -> funcion .)
    LE              reduce using rule 104 (factor -> funcion .)
    GT              reduce using rule 104 (factor -> funcion .)
    GE              reduce using rule 104 (factor -> funcion .)
    EQ              reduce using rule 104 (factor -> funcion .)
    NE              reduce using rule 104 (factor -> funcion .)
    AND             reduce using rule 104 (factor -> funcion .)
    OR              reduce using rule 104 (factor -> funcion .)
    CLOSEPAR        reduce using rule 104 (factor -> funcion .)
    ID              reduce using rule 104 (factor -> funcion .)
    RETURN          reduce using rule 104 (factor -> funcion .)
    READ            reduce using rule 104 (factor -> funcion .)
    WRITE           reduce using rule 104 (factor -> funcion .)
    IF              reduce using rule 104 (factor -> funcion .)
    WHILE           reduce using rule 104 (factor -> funcion .)
    FOR             reduce using rule 104 (factor -> funcion .)
    OPENPAR         reduce using rule 104 (factor -> funcion .)
    INT             reduce using rule 104 (factor -> funcion .)
    FLOAT           reduce using rule 104 (factor -> funcion .)
    CHAR            reduce using rule 104 (factor -> funcion .)
    CLOSECURLY      reduce using rule 104 (factor -> funcion .)
    SEMICOLON       reduce using rule 104 (factor -> funcion .)
    COMMA           reduce using rule 104 (factor -> funcion .)
    TO              reduce using rule 104 (factor -> funcion .)
    DO              reduce using rule 104 (factor -> funcion .)


state 50

    (15) lista_ids2 -> COMMA lista_ids .

    SEMICOLON       reduce using rule 15 (lista_ids2 -> COMMA lista_ids .)
    CLOSEPAR        reduce using rule 15 (lista_ids2 -> COMMA lista_ids .)
    COMMA           reduce using rule 15 (lista_ids2 -> COMMA lista_ids .)


state 51

    (26) funciones3 -> funciones6 .

    MAIN            reduce using rule 26 (funciones3 -> funciones6 .)


state 52

    (25) funciones3 -> funciones4 .

    MAIN            reduce using rule 25 (funciones3 -> funciones4 .)


state 53

    (24) funciones2 -> ID OPENPAR funciones3 .

    MAIN            reduce using rule 24 (funciones2 -> ID OPENPAR funciones3 .)


state 54

    (27) funciones4 -> tipo . ID funciones5

    ID              shift and go to state 82


state 55

    (30) funciones6 -> CLOSEPAR . funciones7
    (31) funciones7 -> . vars OPENCURLY funciones8
    (32) funciones7 -> . OPENCURLY funciones8
    (8) vars -> . VARS vars1

    OPENCURLY       shift and go to state 84
    VARS            shift and go to state 6

    funciones7                     shift and go to state 83
    vars                           shift and go to state 85

state 56
